--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -189,7 +189,7 @@
            </button>
         </div>
         <div class="modal-body">
-           <p>Are you sure you want to delete Menu {{ deleteMenu?.menuName }}</p>
+           <p>Are you sure you want to delete Menu - {{ deleteMenu?.menuName }}</p>
            <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
               <button (click)="onDeleteMenu(deleteMenu!.id)" class="btn btn-danger" data-dismiss="modal">Yes</button>
