--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         </li>
      </ul>
      <form class="form-inline my-2 my-lg-0">
-        <input type="search" name="key" id="searchName" class="form-control mr-sm-2" placeholder="Search menus..." required>
+        <input type="search" (ngModelChange)="searchMenus(key.value)" #key="ngModel" ngModel name="key" id="searchName" class="form-control mr-sm-2" placeholder="Search menus..." required>
      </form>
   </div>
 </nav>
@@ -200,10 +200,10 @@
 </div>
 
 
-<!-- Notification for no employees -->
-<div class="col-lg-12 col-md-12 col-xl-12">
+<!-- Notification for no menu -->
+<div *ngIf="menus?.length === 0" class="col-lg-12 col-md-12 col-xl-12">
   <div class="alert alert-info" role="alert">
-    <h4 class="alert-heading">NO MENUS AVAILABLE!!!</h4>
-    <p>There are no more menus to serve.</p>
+    <h4 class="alert-heading">NO MENUS AVAILABLE!</h4>
+    <p>The waiter will help you in a minute. Thank you.</p>
   </div>
 </div>
